Refactor and move some clases to other packages and add external cache fetching